# SharpSV

./: .gitignore  LICENSE  MANIFEST.in  README.md  SharpSV.py  environment.yml  pyproject.toml  requirements.txt  setup.py  sharpsv_backend.py  sharpsv_native.py  sharpsv_stage1_extract_features.py  sharpsv_stage1_score_candidates.py  sharpsv_stage1_train.py  sharpsv_stage2_refine_predictions.py  sharpsv_stage3_sort_predictions.py  sharpsv_stage3_validate_assembly.py  sharpsv_stage4_export_vcf.py  sharpsv_stage4_realign_vcf.py
conda.recipe/: meta.yaml
docs/: CODEBASE_LAYOUT.md  GITHUB_RELEASE.md  INSTALLATION.md  PIPELINE_OVERVIEW.md  TUTORIAL.md
fermikit/: local_assemble.py  merge_bams.py
fermikit/fermi.kit/: bfc  bwa  fermi2  htsbox  mag2bam  ropebwt2  seqtk  trimadap-mt
legacy/: FILE_CLASS.py  Features.py  Init_Image.py  README.md  VCF_CLASS.py  net.py  pyalign.py
scripts/: export_stage2_genomewide_vcf.py  refine_stage2_window_predictions_to_precise_vcf.py
sharpsv/: __init__.py  backend.py  bundled_models.py  demo_bundle.py  native.py
sharpsv/_bundle/demo/: README.md  demo.bam  demo.bam.bai  demo.fa  demo.fa.amb  demo.fa.ann  demo.fa.bwt  demo.fa.fai  demo.fa.pac  demo.fa.sa  demo_region.json
sharpsv/_bundle/models/: manifest.json
sharpsv/cli/: pipeline.py
sharpsv/stage1/: __init__.py  features.py  model.py  predict.py  train.py
sharpsv/stage2/: __init__.py  features.py  image.py  model.py  refine.py
sharpsv/stage3/: __init__.py  assembly_validator.py  pipeline.py  sort_predictions.py
sharpsv/stage4/: __init__.py  export_vcf_cli.py  pipeline.py  realign_vcf.py
sharpsv/utils/: __init__.py  console.py
simulated_models/: README.md  stage1_simulated_5class_compact.pt
sv5_models/: README.md
